--- a/doc/locale/fr/LC_MESSAGES/changelog.po
+++ b/doc/locale/fr/LC_MESSAGES/changelog.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-02 10:30+0100\n"
+"POT-Creation-Date: 2025-11-02 10:33+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -30,6 +30,21 @@ msgstr "sigima 1.0.1"
 
 msgid "🛠️ Bug fixes:"
 msgstr "🛠️ Correctifs:"
+
+msgid "**Parameter classes**: Removed default titles from generic `OrdinateParam` and `AbscissaParam` classes"
+msgstr "**Classes de paramètres** : Suppression des titres par défaut des classes génériques `OrdinateParam` et `AbscissaParam`"
+
+msgid "These parameter classes are reused across multiple computation functions (e.g., `full_width_at_y`, `x_at_y`)"
+msgstr "Ces classes de paramètres sont réutilisées dans plusieurs fonctions de calcul (par exemple, `full_width_at_y`, `x_at_y`)"
+
+msgid "Default titles like \"Ordinate\" created redundancy when displayed with function names in analysis results"
+msgstr "Des titres par défaut comme \"Ordinate\" créaient une redondance lorsqu'ils étaient affichés avec les noms de fonction dans les résultats d'analyse."
+
+msgid "Titles are now empty by default, allowing applications to provide context-specific titles when needed"
+msgstr "Les titres sont désormais vides par défaut, permettant aux applications de fournir des titres spécifiques au contexte si nécessaire."
+
+msgid "Improves clarity when the same parameter class is used by different functions"
+msgstr "Améliore la clarté lorsque la même classe de paramètres est utilisée par différentes fonctions."
 
 msgid "**Result HTML representation**: Improved color contrast for dark mode"
 msgstr "Représentation HTML des résultats : amélioration du contraste des couleurs pour le mode sombre"
