Fix 2D peak detection architectural violation and add ROI creation utility
Bug Fixes:
- Remove ROI creation from peak_detection() computation function
  * Computation functions must be pure (no input object modification)
  * Fixes regression in DataLab where ROIs weren't created in processor workflow
  * Maintains separation: Sigima computes, applications visualize

New Features:
- Add create_image_roi_around_points() utility in sigima.objects.image.roi
  * Creates rectangular/circular ROIs around point coordinates
  * Auto-calculates optimal size based on minimum point distance
  * Handles boundary conditions for valid image coordinates
  * Centralizes ROI creation logic for reuse across applications

This change improves architectural integrity while maintaining
functionality for end-users through the new utility function.

--- a/doc/locale/fr/LC_MESSAGES/changelog.po
+++ b/doc/locale/fr/LC_MESSAGES/changelog.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-02 17:11+0100\n"
+"POT-Creation-Date: 2025-11-03 15:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -30,6 +30,27 @@ msgstr "sigima 1.0.1"
 
 msgid "💥 New features and enhancements:"
 msgstr "💥 Nouvelles fonctionnalités et améliorations:"
+
+msgid "**Image ROI creation utility**: New `create_image_roi_around_points()` function in `sigima.objects.image.roi`"
+msgstr "**Utilitaire de création de ROI d'image** : Nouvelle fonction `create_image_roi_around_points()` dans `sigima.objects.image.roi`"
+
+msgid "Creates rectangular or circular ROIs around a set of point coordinates"
+msgstr "Crée des ROI rectangulaires ou circulaires autour d'un ensemble de coordonnées de points"
+
+msgid "Automatically calculates optimal ROI size based on minimum distance between points"
+msgstr "Calcule automatiquement la taille optimale de la ROI en fonction de la distance minimale entre les points"
+
+msgid "Handles boundary conditions to keep ROIs within valid image coordinates"
+msgstr "Gère les conditions de bord pour maintenir les ROI dans des coordonnées d'image valides"
+
+msgid "Supports both \"rectangle\" and \"circle\" geometry types"
+msgstr "Prend en charge les types de géométrie \"rectangle\" et \"cercle\""
+
+msgid "Designed for creating ROIs around detected features (peaks, blobs, etc.)"
+msgstr "Conçu pour créer des ROI autour des caractéristiques détectées (pics, blobs, etc.)"
+
+msgid "Centralizes ROI creation logic previously duplicated across applications"
+msgstr "Centralise la logique de création de ROI précédemment dupliquée dans les applications"
 
 msgid "**Annotations API**: New public API for managing annotations on Signal and Image objects"
 msgstr "**API d'annotations** : Nouvelle API publique pour la gestion des annotations sur les objets Signal et Image"
@@ -66,6 +87,30 @@ msgstr "Entièrement compatible avec le modèle d'adaptateur PlotPy de DataLab p
 
 msgid "🛠️ Bug fixes:"
 msgstr "🛠️ Correctifs:"
+
+msgid "**2D peak detection**: Fixed architectural violation in `peak_detection()` computation function"
+msgstr ""
+
+msgid "Removed direct ROI creation from computation function (was modifying input objects)"
+msgstr ""
+
+msgid "Computation functions decorated with `@computation_function()` must be pure (no side effects)"
+msgstr ""
+
+msgid "Removed line 128: `obj.roi = create_image_roi(...)` which violated this principle"
+msgstr ""
+
+msgid "ROI creation now handled by applications in their presentation layer"
+msgstr ""
+
+msgid "DataLab uses new `create_image_roi_around_points()` utility for this purpose"
+msgstr ""
+
+msgid "Maintains separation of concerns: Sigima computes results, applications create visual representations"
+msgstr ""
+
+msgid "Fixes regression where ROIs were not appearing in DataLab's processor-based workflow"
+msgstr ""
 
 msgid "**Parameter classes**: Removed default titles from generic `OrdinateParam` and `AbscissaParam` classes"
 msgstr "**Classes de paramètres** : Suppression des titres par défaut des classes génériques `OrdinateParam` et `AbscissaParam`"
