--- a/doc/locale/fr/LC_MESSAGES/changelog.po
+++ b/doc/locale/fr/LC_MESSAGES/changelog.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-05 12:51+0100\n"
+"POT-Creation-Date: 2025-11-05 16:53+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -252,6 +252,9 @@ msgstr "Correction de `ValueError` dans `choose_savgol_window_auto()` lors du tr
 
 msgid "Modified `RadialProfileParam` to allow initialization of the dataset even when the associated image object is not yet set (call to `update_from_obj`). This is useful when creating the parameter object before assigning the image, enabling more flexible workflows."
 msgstr "Modification de `RadialProfileParam` pour permettre l'initialisation de l'ensemble de données même lorsque l'objet image associé n'est pas encore défini (appel à `update_from_obj`). Cela est utile lors de la création de l'objet paramètre avant d'assigner l'image, permettant des flux de travail plus flexibles."
+
+msgid "Removed unused `signals_to_array()` function from `sigima.proc.signal.arithmetic` module. This function was not used anywhere in the codebase and has been replaced by direct NumPy array construction in `__signals_y_to_array()` and `__signals_dy_to_array()` functions, for internal use only."
+msgstr "Suppression de la fonction inutilisée `signals_to_array()` du module `sigima.proc.signal.arithmetic`. Cette fonction n'était utilisée nulle part dans la base de code et a été remplacée par une construction directe de tableau NumPy dans les fonctions `__signals_y_to_array()` et `__signals_dy_to_array()`, pour un usage interne uniquement."
 
 msgid "sigima 1.0.0"
 msgstr "sigima 1.0.0"
