Add GeometryResult.value property and enhance signal analysis functions
- Introduced `GeometryResult.value` property for easy access to computed geometry values for POINT, MARKER, and SEGMENT shapes.
- Updated `x_at_y()` and `y_at_x()` functions to return `GeometryResult` for better visualization in DataLab GUI.
- Enhanced error handling for unsupported shapes and multi-row results in `GeometryResult`.
- Added unit tests for the new value property and updated tests for signal analysis functions to validate new behavior.

--- a/doc/locale/fr/LC_MESSAGES/changelog.po
+++ b/doc/locale/fr/LC_MESSAGES/changelog.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-09 11:16+0100\n"
+"POT-Creation-Date: 2025-11-09 17:00+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -28,6 +28,54 @@ msgstr "La bibliothèque `sigima` fait partie de la plateforme open-source DataL
 msgid "sigima 1.0.2"
 msgstr "sigima 1.0.2"
 
+msgid "💥 New features and enhancements:"
+msgstr "💥 Nouvelles fonctionnalités et améliorations:"
+
+msgid "**GeometryResult.value property**: New convenience property for easy script access to computed geometry values"
+msgstr "**Propriété GeometryResult.value** : Nouvelle propriété de commodité pour un accès facile aux valeurs géométriques calculées dans les scripts"
+
+msgid "Supports POINT, MARKER, and SEGMENT shapes"
+msgstr "Prend en charge les formes POINT, MARKER et SEGMENT"
+
+msgid "Returns `(x, y)` tuple for POINT and MARKER shapes (both coordinates accessible)"
+msgstr "Renvoie un tuple `(x, y)` pour les formes POINT et MARKER (les deux coordonnées accessibles)"
+
+msgid "Returns `float` length for SEGMENT shapes (calculated via `segments_lengths()`)"
+msgstr "Renvoie une longueur `float` pour les formes SEGMENT (calculée via `segments_lengths()`)"
+
+msgid "Return type annotation: `float | tuple[float, float]`"
+msgstr "Annotation de type de retour : `float | tuple[float, float]`"
+
+msgid "Provides intuitive API: unpack coordinates with `x, y = result.value` or get length with `length = result.value`"
+msgstr "Fournit une API intuitive : déballer les coordonnées avec `x, y = result.value` ou obtenir la longueur avec `length = result.value`"
+
+msgid "Comprehensive error handling for unsupported shapes and multi-row results"
+msgstr "Gestion complète des erreurs pour les formes non prises en charge et les résultats à plusieurs lignes"
+
+msgid "**Signal analysis functions return GeometryResult**: Changed `x_at_y()` and `y_at_x()` to return geometry results for better visualization"
+msgstr "**Les fonctions d'analyse de signal renvoient GeometryResult** : Modification de `x_at_y()` et `y_at_x()` pour renvoyer des résultats géométriques pour une meilleure visualisation"
+
+msgid "`x_at_y()` now returns `GeometryResult` with `MARKER` kind (previously returned `TableResult`)"
+msgstr "`x_at_y()` renvoie désormais `GeometryResult` avec le type `MARKER` (au lieu de `TableResult`)"
+
+msgid "`y_at_x()` now returns `GeometryResult` with `MARKER` kind (previously returned `TableResult`)"
+msgstr "`y_at_x()` renvoie désormais `GeometryResult` avec le type `MARKER` (au lieu de `TableResult`)"
+
+msgid "Both functions return coordinates as `[x, y]` in N×2 array format for cross marker display"
+msgstr "Les deux fonctions renvoient les coordonnées sous la forme d'un tableau N×2 pour l'affichage des marqueurs croisés"
+
+msgid "Enables proper marker visualization in DataLab GUI (displayed as cross markers on plots)"
+msgstr "Permet une visualisation correcte des marqueurs dans l'interface graphique de DataLab (affichés comme des marqueurs croisés sur les graphiques)"
+
+msgid "Script-friendly API: use `.value` property to easily extract coordinates as `(x, y)` tuple"
+msgstr "API conviviale pour les scripts : utilisez la propriété `.value` pour extraire facilement les coordonnées sous forme de tuple `(x, y)`"
+
+msgid "Example: `x, y = proxy.compute_x_at_y(params).value` provides direct access to both coordinates"
+msgstr "Exemple : `x, y = proxy.compute_x_at_y(params).value` fournit un accès direct aux deux coordonnées"
+
+msgid "Breaking change: Scripts accessing results as tables need to update to use `.value` property or `.coords` array"
+msgstr "Changement majeur : Les scripts accédant aux résultats sous forme de tableaux doivent être mis à jour pour utiliser la propriété `.value` ou le tableau `.coords`"
+
 msgid "🛠️ Bug fixes:"
 msgstr "🛠️ Correctifs:"
 
@@ -39,9 +87,6 @@ msgstr "La méthode `BaseObj.roi_has_changed` a été rendue privée (en la reno
 
 msgid "sigima 1.0.1"
 msgstr "sigima 1.0.1"
-
-msgid "💥 New features and enhancements:"
-msgstr "💥 Nouvelles fonctionnalités et améliorations:"
 
 msgid "**Detection ROI creation**: Generic mechanism for ROI creation across all detection functions"
 msgstr "**Création de ROI de détection** : Mécanisme générique de création de ROI pour toutes les fonctions de détection"
